fix: исправить замечания после ревью

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,11 @@
     <string name="share_app">Поделиться приложением</string>
     <string name="support">Написать в поддержку</string>
     <string name="user_agreement">Пользовательское соглашение</string>
+    <string name="share_message">https://practicum.yandex.ru/android-developer/</string>
+    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
+    <string name="mail_to">mailto:</string>
+    <string name="email">alex126.1bat@gmail.com</string>
+    <string name="support_theme">Тема: Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
+    <string name="user_agreement_data">https://yandex.ru/legal/practicum_offer/</string>
+    <string name="share_intent_type">text/plain</string>
 </resources>
