feat: реализовать ДЗ Спирнт №11

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="support_theme">Тема: Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
     <string name="user_agreement_data">https://yandex.ru/legal/practicum_offer/</string>
     <string name="share_intent_type">text/plain</string>
+    <string name="nothing_found">Ничего не нашлось</string>
+    <string name="connection_error">Проблемы со связью\n\nЗагрузка не удалась.Проверьте\n
+        подключение к интернету</string>
 </resources>
