--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="nothing_found">Ничего не нашлось</string>
     <string name="connection_error">Проблемы со связью\n\nЗагрузка не удалась.Проверьте\n
         подключение к интернету</string>
+    <string name="you_searched">Вы искали</string>
 </resources>
