--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,9 @@
     <string name="genre">Жанр</string>
     <string name="country">Страна</string>
     <string name="timer_start_value_00_00">00:00</string>
+    <string name="favourite_tracks">Избранные треки</string>
+    <string name="playlist">Плейлисты</string>
+    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
+    <string name="new_playlist">Новый плейлист</string>
+    <string name="empty_media">Ваша медиатека пуста</string>
 </resources>
