--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,21 @@
     <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
     <string name="new_playlist">Новый плейлист</string>
     <string name="empty_media">Ваша медиатека пуста</string>
+    <plurals name="track">
+        <item quantity="one">трек</item>
+        <item quantity="few">трека</item>
+        <item quantity="many">треков</item>
+        <item quantity="other">треков</item>
+    </plurals>
+    <string name="playlist_title">Название*</string>
+    <string name="playlist_description">Описание</string>
+    <string name="playlist_button_text">Создать</string>
+    <string name="confirmation_dialog_title">Завершить создание плейлиста?</string>
+    <string name="confirmation_dialog_message">Все несохраненные данные будут потеряны</string>
+    <string name="confirmation_dialog_negative">Отмена</string>
+    <string name="confirmation_dialog_positive">Завершить</string>
+    <string name="playlist_created_snackbar">Плейлист %1$s создан</string>
+    <string name="add_to_playlist">Добавить в плейлист</string>
+    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
+    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
 </resources>
